--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,8 @@ header {
     background-color: white;
     color: #003049;
     font-size: 1em;
+    position: fixed;
+    width: 100%;
 }
 
 /*------------- SMALL SCREENS (COL-SM-) ------------------------*/
