--- a/styles.css
+++ b/styles.css
@@ -27,22 +27,6 @@
 
 /*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
 
-html::-webkit-scrollbar {
-    display: none;
-}
-
-html::-webkit-scrollbar-button {
-    display: none;
-}
-
-html::-webkit-scrollbar-thumb {
-    display: none;
-}
-
-html::-webkit-scrollbar-track {
-    display: none;
-}
-
 body {    
     -webkit-user-select: none; /* Webkit */
     -moz-user-select: none; /* Firefox */
@@ -138,13 +122,13 @@ header {
             color: white;
             margin: 0;
             padding: 0;
+            z-index: 9;
         }
         
         .navbar-collapse {
             margin-left: 0;
             background-color: white;
             border-radius: 0 0 30px 30px;
-            z-index: 9;
             margin: 0;
             padding: 0;
             position: absolute;
@@ -186,6 +170,7 @@ header {
             text-align: center;
             margin: 0;
             padding: 0;
+            cursor:pointer;
         }
     
         .navbar-nav {
@@ -232,7 +217,6 @@ header {
     }
     
     .navbar-collapse {
-        z-index: 9;
         margin: 0;
         padding: 0;
         position: relative;
@@ -296,7 +280,7 @@ header {
 
 /*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
     main {
-        padding-top: 2em;
+        padding-top: 3em;
         color: white;
         height: 56em;
         max-height: 90vh;
@@ -326,12 +310,13 @@ header {
         flex-flow: row wrap;
         justify-content: center;
         align-content: center;
+        height: 30vh;
     }
 
         #headshot {
             border-radius: 2%;
             background-color:gainsboro;
-            width: 100%;
+            height: 100%;
         }
 
     #title {
@@ -341,13 +326,13 @@ header {
 
 /*------------- SMALL SCREENS (COL-SM-) ------------------------*/
 @media screen and (min-width: 576px) {
-
-    #headshot {
-        display: block;
-        max-width: 100%;
-        max-height: 60vh;
-        width: auto;
-        height: auto;
+    
+    .headshot_box {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-content: center;
+        height: 50vh;
     }
     
 }
@@ -417,6 +402,22 @@ header {
     @keyframes signature_stephen {
     from {opacity: 0}
     to {opacity: 1}
+    }
+
+    html::-webkit-scrollbar {
+        display: none;
+    }
+    
+    html::-webkit-scrollbar-button {
+        display: none;
+    }
+    
+    html::-webkit-scrollbar-thumb {
+        display: none;
+    }
+    
+    html::-webkit-scrollbar-track {
+        display: none;
     }
 
 /*------------- SMALL SCREENS (COL-SM-) ------------------------*/
